--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=backend
 #MongoDB-config
 spring.data.mongodb.uri=mongodb+srv://${MONGODB_USERNAME}:${MONGODB_PASSWORD}@teambond2.7wk0tin.mongodb.net/${MONGODB_DB}
 spring.data.mongodb.database=${MONGODB_DB}
-server.port=8080
+server.port=${PORT:8080}
 
 spring.data.redis.host=${REDIS_URI}
 spring.data.redis.port=${REDIS_PORT}
